# MBU_Software_Tests

./: .gitignore  .pylintrc  main.py  pyproject.toml
process_template_dadj.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
